--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "prettier": "2.8.8",
     "typescript": "5.0.4",
     "undici": "5.22.0",
-    "vite": "4.3.2",
+    "vite": "^4.3.9",
     "vite-plugin-simple-json-server": "^0.6.2",
     "vite-tsconfig-paths": "4.2.0",
     "wrangler": "latest"
